@@ -20,6 +20,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -224,7 +234,7 @@ specifier|public
 interface|interface
 name|AMRMProtocol
 block|{
-comment|/**    *<p>The interface used by a new<code>ApplicationMaster</code> to register     * with the<code>ResourceManager</code>.</p>     *     *<p>The<code>ApplicationMaster</code> needs to provide details such    * as RPC Port, HTTP tracking url etc. as specified in     * {@link RegisterApplicationMasterRequest}.</p>    *     *<p>The<code>ResourceManager</code> responds with critical details such     * as minimum and maximum resource capabilities in the cluster as specified in    * {@link RegisterApplicationMasterResponse}.</p>    *      * @param request registration request    * @return registration respose    * @throws YarnRemoteException    */
+comment|/**    *<p>The interface used by a new<code>ApplicationMaster</code> to register     * with the<code>ResourceManager</code>.</p>     *     *<p>The<code>ApplicationMaster</code> needs to provide details such    * as RPC Port, HTTP tracking url etc. as specified in     * {@link RegisterApplicationMasterRequest}.</p>    *     *<p>The<code>ResourceManager</code> responds with critical details such     * as minimum and maximum resource capabilities in the cluster as specified in    * {@link RegisterApplicationMasterResponse}.</p>    *      * @param request registration request    * @return registration respose    * @throws YarnRemoteException    * @throws IOException    */
 DECL|method|registerApplicationMaster ( RegisterApplicationMasterRequest request)
 specifier|public
 name|RegisterApplicationMasterResponse
@@ -235,8 +245,10 @@ name|request
 parameter_list|)
 throws|throws
 name|YarnRemoteException
+throws|,
+name|IOException
 function_decl|;
-comment|/**    *<p>The interface used by an<code>ApplicationMaster</code> to notify the     *<code>ResourceManager</code> about its completion (success or failed).</p>    *     *<p>The<code>ApplicationMaster</code> has to provide details such as     * final state, diagnostics (in case of failures) etc. as specified in     * {@link FinishApplicationMasterRequest}.</p>    *     *<p>The<code>ResourceManager</code> responds with     * {@link FinishApplicationMasterResponse}.</p>    *     * @param request completion request    * @return completion response    * @throws YarnRemoteException    */
+comment|/**    *<p>The interface used by an<code>ApplicationMaster</code> to notify the     *<code>ResourceManager</code> about its completion (success or failed).</p>    *     *<p>The<code>ApplicationMaster</code> has to provide details such as     * final state, diagnostics (in case of failures) etc. as specified in     * {@link FinishApplicationMasterRequest}.</p>    *     *<p>The<code>ResourceManager</code> responds with     * {@link FinishApplicationMasterResponse}.</p>    *     * @param request completion request    * @return completion response    * @throws YarnRemoteException    * @throws IOException    */
 DECL|method|finishApplicationMaster ( FinishApplicationMasterRequest request)
 specifier|public
 name|FinishApplicationMasterResponse
@@ -247,8 +259,10 @@ name|request
 parameter_list|)
 throws|throws
 name|YarnRemoteException
+throws|,
+name|IOException
 function_decl|;
-comment|/**    *<p>The main interface between an<code>ApplicationMaster</code>     * and the<code>ResourceManager</code>.</p>    *     *<p>The<code>ApplicationMaster</code> uses this interface to provide a list      * of {@link ResourceRequest} and returns unused {@link Container} allocated     * to it via {@link AllocateRequest}.</p>    *     *<p>This also doubles up as a<em>heartbeat</em> to let the     *<code>ResourceManager</code> know that the<code>ApplicationMaster</code>    * is alive. Thus, applications should periodically make this call to be kept    * alive. The frequency depends on ??</p>    *     *<p>The<code>ResourceManager</code> responds with list of allocated     * {@link Container}, status of completed containers and headroom information     * for the application.</p>     *     *<p>The<code>ApplicationMaster</code> can use the available headroom     * (resources) to decide how to utilized allocated resources and make     * informed decisions about future resource requests.</p>    *     * @param request allocation request    * @return allocation response    * @throws YarnRemoteException    */
+comment|/**    *<p>The main interface between an<code>ApplicationMaster</code>     * and the<code>ResourceManager</code>.</p>    *     *<p>The<code>ApplicationMaster</code> uses this interface to provide a list      * of {@link ResourceRequest} and returns unused {@link Container} allocated     * to it via {@link AllocateRequest}.</p>    *     *<p>This also doubles up as a<em>heartbeat</em> to let the     *<code>ResourceManager</code> know that the<code>ApplicationMaster</code>    * is alive. Thus, applications should periodically make this call to be kept    * alive. The frequency depends on ??</p>    *     *<p>The<code>ResourceManager</code> responds with list of allocated     * {@link Container}, status of completed containers and headroom information     * for the application.</p>     *     *<p>The<code>ApplicationMaster</code> can use the available headroom     * (resources) to decide how to utilized allocated resources and make     * informed decisions about future resource requests.</p>    *     * @param request allocation request    * @return allocation response    * @throws YarnRemoteException    * @throws IOException    */
 DECL|method|allocate (AllocateRequest request)
 specifier|public
 name|AllocateResponse
@@ -259,6 +273,8 @@ name|request
 parameter_list|)
 throws|throws
 name|YarnRemoteException
+throws|,
+name|IOException
 function_decl|;
 block|}
 end_interface
